Fix font issue on mobile #2

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
   @font-face {
     font-family: "Impostograph";
-    src: url("./src/fonts/Impostograph.ttf");
+    src: url("./src/fonts/Impostograph.woff2") format('woff2');
   }
 
   * {
